<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/map" tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="輸入地址或地標名稱"
        android:layout_gravity="top|left"
        android:background="#22008800"
        android:id="@+id/editText" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="195dp"
        android:layout_gravity="bottom|left"
        android:background="#33000088"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/MapType"
                android:id="@+id/spinner" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Traffic"
                android:id="@+id/checkBox"
                android:checked="false"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MyLocationButton"
                android:id="@+id/checkBox2"
                android:checked="true"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MyLocationLayer"
                android:id="@+id/checkBox3"
                android:checked="false"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ZoomControl"
                android:id="@+id/checkBox4"
                android:checked="false"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Compasss"
                android:id="@+id/checkBox5"
                android:checked="true"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ScrollGesture"
                android:id="@+id/checkBox6"
                android:checked="true"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ZoomGesture"
                android:id="@+id/checkBox7"
                android:checked="true"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RotateGesture"
                android:id="@+id/checkBox8"
                android:checked="true"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TileGesture"
                android:id="@+id/checkBox9"
                android:checked="true"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>